--- a/package.json
+++ b/package.json
@@ -15,18 +15,42 @@
     "@babel/preset-react": "^7.0.0",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "bluebird": "^3.5.3",
+    "body-parser": "^1.18.3",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
     "dotenv-webpack": "^1.7.0",
+    "filestack-js": "^1.14.1",
     "html-webpack-plugin": "^3.2.0",
+    "mapbox-gl": "^0.53.0",
+    "mapbox-gl-geocoder": "^2.0.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-filestack": "^0.9.7",
+    "react-mapbox-autocomplete": "^0.2.3",
+    "react-router-dom": "^4.3.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "axios": "^0.18.0",
+    "babel-loader": "^8.0.5",
+    "bulma": "^0.7.2",
+    "css-loader": "^2.1.0",
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.29.1",
+    "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
   }
 }
