--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "babel-loader": "^8.0.5",
     "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
+    "bulma": "^0.7.2",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
     "dotenv-webpack": "^1.7.0",
+    "file-loader": "^3.0.1",
     "filestack-js": "^1.14.1",
     "html-webpack-plugin": "^3.2.0",
     "mapbox-gl": "^0.53.0",
@@ -33,13 +35,18 @@
     "react-router-dom": "^4.3.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "webpack": "^4.29.5",
-    "webpack-cli": "^3.2.3",
     "url-loader": "^1.1.2",
-    "file-loader": "^3.0.1",
-    "bulma": "^0.7.2"
+    "webpack": "^4.29.5",
+    "webpack-cli": "^3.2.3"
   },
-  "devDependencies": {
+ "devDependencies": {
+    "chai": "^4.2.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.10.0",
+    "ignore-styles": "^5.0.1",
+    "jsdom": "^13.2.0",
+    "mocha": "^6.0.2",
+    "sinon": "^7.2.7",
     "webpack-dev-server": "^3.2.1"
   }
 }
